--- a/notebooks/2023report_final.ipynb
+++ b/notebooks/2023report_final.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 最終レポート(提出期限6/4)\n",
+    "# 最終レポート(提出期限6/7(Wed.))\n",
     "\n",
     "**必ず名前と学籍番号を書くこと**\n",
     "\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "SPEND   303.0  149.646865  22.905161   71.0  133.5  153.0  166.0  202.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x184714ca2e0>"
+       "<matplotlib.collections.PathCollection at 0x1a1dc837310>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "Text(0.5, 0, 'Income / spend')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "       2, 3, 1, 2, 2, 1, 3, 2, 2, 2, 2, 2, 0, 0, 2, 2, 3])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "       [264, 132]], dtype=int64)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,16 +405,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1846fdcb550>"
+       "<matplotlib.collections.PathCollection at 0x1a1e3c811f0>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
